k8s/microservices/alice-voice-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alice-voice-service-ingress
  namespace: nova-staging
  labels:
    app: alice-voice-service
    app.kubernetes.io/name: alice-voice-service
    app.kubernetes.io/part-of: nova
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  ingressClassName: gce
  rules:
  - host: alice-voice.staging.nova.social
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alice-voice-service
            port:
              number: 8080
